--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
+    "autoprefixer": "^7.0.1",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
@@ -109,8 +110,13 @@
     "html-webpack-plugin": "^2.24.1",
     "immutability-helper": "^2.0.0",
     "keymirror": "^0.1.1",
+    "postcss-calc": "^6.0.0",
+    "postcss-color-function": "^3.0.0",
+    "postcss-custom-properties": "^5.0.2",
     "postcss-loader": "^1.3.2",
     "postcss-merge-rules": "^2.1.2",
+    "postcss-nested": "^1.0.1",
+    "postcss-reporter": "^3.0.0",
     "postcss-smart-import": "^0.5.1",
     "postcss-url": "^5.1.2",
     "prop-types": "^15.5.8",
