--- a/package.json
+++ b/package.json
@@ -110,8 +110,9 @@
     "html-webpack-plugin": "^2.24.1",
     "immutability-helper": "^2.0.0",
     "keymirror": "^0.1.1",
-    "postcss-calc": "^6.0.0",
+    "postcss-calc": "^5.3.1",
     "postcss-color-function": "^3.0.0",
+    "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.2",
     "postcss-loader": "^1.3.2",
     "postcss-merge-rules": "^2.1.2",
