Add NPM start command

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "stats:build": "webpack --profile --json --config ./tools/webpack/webpack.config.publish.js > .stats.json",
     "stats:serve": "npm run stats:build && webpack-bundle-analyzer ./.stats.json ./build",
     "stats:help": "webpack-bundle-analyzer --help",
-    "serve": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode local",
+    "start": "npm run serve:local",
+    "serve:local": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode local",
     "serve:build": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode publish",
-    "serve:local": "npm run serve -- --host 0.0.0.0",
     "setup": "npm run setup:npm",
     "setup:npm": "npm prune && npm update && npm install --production",
     "test": "jest",
