--- a/.babelrc
+++ b/.babelrc
@@ -8,13 +8,20 @@
     "production": {
       "plugins": [
         "transform-react-remove-prop-types"
-      ],
+      ]
     },
     "development": {
       "plugins": ["react-hot-loader/babel"]
     },
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
+    },
+    "node": {
+      "presets": [
+        "es2015",
+        "stage-3",
+        "react"
+      ]
     }
   }
 }
