First SSR state implementation

--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,13 @@
         "es2015",
         "stage-3",
         "react"
+      ],
+      "plugins": [
+        "css-modules-transform",
+        "inline-react-svg",
+        ["inline-dotenv", {
+          "path": ".env"
+        }]
       ]
     }
   }
