--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "dev": "node generate-envfile.js dev",
     "prod": "node generate-envfile.js prod",
     "clean": "rm -rf build && rm -rf build_server",
-    "": "rm -rf build && rm -rf build_server",
     "build": "npm run clean && npm run build:app && npm run build:server",
-    "build:app": "webpack --config ./tools/webpack/webpack.config.publish.js",
+    "build:app": "webpack --config ./tools/webpack/webpack.config.local.js",
     "build:server": "npm run build:server:app && npm run build:server:ssr && rm -rf build/index.html",
     "build:server:app": "BABEL_ENV=node babel src --out-dir build_server/src",
     "build:server:ssr": "BABEL_ENV=node babel server --out-dir build_server/server",
@@ -30,10 +29,11 @@
     "stats:serve": "npm run stats:build && webpack-bundle-analyzer ./.stats.json ./build",
     "stats:help": "webpack-bundle-analyzer --help",
     "start": "npm run serve:local",
-    "start:server": "npm run build:server:ssr && node build_server/server",
-    "start:server:watch": "nodemon -e js,jsx --watch src --watch server --exec \"npm run start:server\"",
+    "start:server": "npm run build && npm run serve:ssr",
+    "start:server:watch": "npm run build && nodemon -e js,jsx --watch src --watch server --exec \"npm run build:server:ssr && npm run serve:ssr\"",
     "serve:local": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode local",
     "serve:build": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode publish",
+    "serve:ssr": "node build_server/server",
     "setup": "npm run setup:npm",
     "setup:npm": "npm prune && npm update && npm install --production",
     "test": "jest",
@@ -112,6 +112,9 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-plugin-css-modules-transform": "^1.6.1",
+    "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
