--- a/package.json
+++ b/package.json
@@ -104,14 +104,15 @@
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-server": "^2.2.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.0.0",
     "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
     "autoprefixer": "^7.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^7.0.0",
     "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-inline-react-svg": "^0.5.4",
@@ -124,16 +125,16 @@
     "css-loader": "^0.25.0",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.9.0",
+    "file-loader": "^2.0.0",
     "history": "^3.2.1",
-    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-plugin": "^3.0.0",
     "immutability-helper": "^2.0.0",
     "keymirror": "^0.1.1",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^3.0.0",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.2",
-    "postcss-loader": "^1.3.2",
+    "postcss-loader": "^2.0.0",
     "postcss-merge-rules": "^2.1.2",
     "postcss-nested": "^1.0.1",
     "postcss-reporter": "^3.0.0",
@@ -150,11 +151,12 @@
     "sanitize.css": "^5.0.0",
     "style-loader": "^0.13.1",
     "url-constructor": "^1.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^1.0.0",
     "use-named-routes": "^0.3.2",
-    "webpack": "^2.2.0",
+    "webpack": "^4.0.0",
     "webpack-dotenv-plugin": "^2.0.0",
-    "webpack-merge": "^3.0.0",
+    "webpack-merge": "^4.0.0",
+    "webpack-emit-all-plugin": "^2.0.1",
     "whatwg-fetch": "^2.0.1"
   }
 }
