--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "prod": "node generate-envfile.js prod",
     "clean": "rm -rf build && rm -rf build_server",
     "build": "npm run clean && npm run build:app && npm run build:server",
-    "build:app": "webpack --config ./tools/webpack/webpack.config.local.js",
-    "build:server": "npm run build:server:app && npm run build:server:ssr && rm -rf build/index.html",
-    "build:server:app": "BABEL_ENV=node webpack --config ./tools/webpack/webpack.config.ssr.js",
-    "build:server:app:old": "BABEL_ENV=node babel src --out-dir build_server/src",
-    "build:server:ssr": "BABEL_ENV=node babel server --out-dir build_server/server",
+    "build:app": "webpack --config ./tools/webpack/webpack.config.browser.js",
+    "build:server": "BABEL_ENV=node webpack --config ./tools/webpack/webpack.config.ssr.js",
     "flow": "flow",
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .eslintignore --cache",
     "preversion": "npm test",
@@ -34,7 +31,7 @@
     "start:server:watch": "npm run build && nodemon -e js,jsx --watch src --watch server --exec \"npm run build:server:ssr && npm run serve:ssr\"",
     "serve:local": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode local",
     "serve:build": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode publish",
-    "serve:ssr": "node build_server/server",
+    "serve:ssr": "node build_server",
     "setup": "npm run setup:npm",
     "setup:npm": "npm prune && npm update && npm install --production",
     "test": "jest",
@@ -95,7 +92,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
-    "isomorphic-fetch": "^2.2.1",
     "jest": "^19.0.2",
     "nock": "^9.0.2",
     "nodemon": "^1.18.6",
@@ -115,15 +111,13 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^7.0.0",
-    "babel-plugin-css-modules-transform": "^1.6.1",
-    "babel-plugin-inline-dotenv": "^1.1.2",
-    "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.22.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
+    "cross-fetch": "^3.0.1",
     "css-loader": "^0.25.0",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^2.0.0",
