--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "prod": "node generate-envfile.js prod",
     "clean": "rm -rf build && rm -rf build_server",
     "build": "npm run clean && npm run build:app && npm run build:server",
-    "build:app": "webpack --config ./tools/webpack/webpack.config.browser.js",
+    "build:app": "webpack --config ./tools/webpack/webpack.config.publish.js",
     "build:server": "BABEL_ENV=node webpack --config ./tools/webpack/webpack.config.ssr.js",
-    "flow": "flow",
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .eslintignore --cache",
     "preversion": "npm test",
     "postversion": "git push && git push --tags",
@@ -26,11 +25,11 @@
     "stats:build": "webpack --profile --json --config ./tools/webpack/webpack.config.publish.js > .stats.json",
     "stats:serve": "npm run stats:build && webpack-bundle-analyzer ./.stats.json ./build",
     "stats:help": "webpack-bundle-analyzer --help",
-    "start": "npm run serve:local",
+    "start": "npm run start:dev_server:local",
+    "start:dev_server:local": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode local",
+    "start:dev_server:build": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode publish",
     "start:server": "npm run build && npm run serve:ssr",
     "start:server:watch": "npm run build && nodemon -e js,jsx --watch src --watch server --exec \"npm run build:server:ssr && npm run serve:ssr\"",
-    "serve:local": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode local",
-    "serve:build": "webpack-dev-server --config ./tools/webpack/webpack.config.server.js --env.mode publish",
     "serve:ssr": "node build_server",
     "setup": "npm run setup:npm",
     "setup:npm": "npm prune && npm update && npm install --production",
@@ -88,7 +87,6 @@
     "enzyme-to-json": "^1.4.4",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-flowtype": "^2.28.2",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
@@ -97,13 +95,13 @@
     "nodemon": "^1.18.6",
     "pre-commit": "^1.1.3",
     "react-element-to-jsx-string": "^5.0.2",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-hot-loader": "^4.5.0",
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.1",
+    "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.0.0",
     "webpack-dev-server": "^3.0.0",
-    "webpack-emit-all-plugin": "^2.0.1",
     "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
@@ -111,17 +109,20 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^7.0.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.22.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "cross-fetch": "^3.0.1",
-    "css-loader": "^0.25.0",
+    "css-loader": "^2.0.0",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.0",
     "history": "^3.2.1",
     "html-webpack-plugin": "^3.0.0",
     "immutability-helper": "^2.0.0",
@@ -130,9 +131,8 @@
     "postcss-color-function": "^3.0.0",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.2",
-    "postcss-loader": "^2.0.0",
-    "postcss-merge-rules": "^2.1.2",
-    "postcss-nested": "^1.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.0.0",
     "postcss-reporter": "^3.0.0",
     "postcss-smart-import": "^0.5.1",
     "postcss-url": "^5.1.2",
@@ -145,11 +145,10 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "sanitize.css": "^5.0.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.23.1",
     "url-constructor": "^1.0.0",
     "url-loader": "^1.0.0",
     "use-named-routes": "^0.3.2",
-    "webpack": "^4.0.0",
     "webpack-dotenv-plugin": "^2.0.0",
     "webpack-merge": "^4.0.0",
     "whatwg-fetch": "^2.0.1"
