--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rm -rf build && rm -rf build_server",
     "build": "npm run clean && npm run build:app && npm run build:server",
     "build:app": "webpack --config ./tools/webpack/webpack.config.publish.js",
-    "build:server": "BABEL_ENV=node webpack --config ./tools/webpack/webpack.config.ssr.js",
+    "build:server": "BABEL_ENV=node webpack --config ./tools/webpack/webpack.config.ssr.js --env.target server",
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .eslintignore --cache",
     "preversion": "npm test",
     "postversion": "git push && git push --tags",
@@ -81,7 +81,6 @@
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
     "dotenv": "^2.0.0",
     "enzyme": "^2.6.0",
     "enzyme-to-json": "^1.4.4",
@@ -105,17 +104,17 @@
     "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^7.0.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.22.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "cross-fetch": "^3.0.1",
@@ -127,6 +126,7 @@
     "html-webpack-plugin": "^3.0.0",
     "immutability-helper": "^2.0.0",
     "keymirror": "^0.1.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^3.0.0",
     "postcss-custom-media": "^5.0.1",
