--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "immutability-helper": "^2.0.0",
     "keymirror": "^0.1.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "path-to-regexp": "^3.0.0",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^3.0.0",
     "postcss-custom-media": "^5.0.1",
@@ -146,7 +147,6 @@
     "redux-thunk": "^2.1.0",
     "sanitize.css": "^5.0.0",
     "style-loader": "^0.23.1",
-    "url-constructor": "^1.0.0",
     "url-loader": "^1.0.0",
     "use-named-routes": "^0.3.2",
     "webpack-dotenv-plugin": "^2.0.0",
