--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
+    "cheerio": "^1.0.0-rc.2",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "cross-fetch": "^3.0.1",
