--- a/package.json
+++ b/package.json
@@ -42,17 +42,6 @@
     "npm": ">= 3.0.0"
   },
   "jest": {
-    "automock": false,
-    "notify": true,
-    "coverageThreshold": {
-      "global": {
-        "branches": 65,
-        "functions": 65,
-        "lines": 65,
-        "statements": 65
-      }
-    },
-    "coverageDirectory": ".coverage",
     "testRegex": "(\\.spec\\.jsx?$)",
     "moduleFileExtensions": [
       "js",
@@ -80,22 +69,21 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^19.0.0",
+    "babel-jest": "^24.0.0",
     "dotenv": "^2.0.0",
-    "enzyme": "^2.6.0",
-    "enzyme-to-json": "^1.4.4",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.0.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
-    "jest": "^19.0.2",
+    "jest": "^24.0.0",
     "nock": "^9.0.2",
     "nodemon": "^1.18.6",
     "pre-commit": "^1.1.3",
-    "react-element-to-jsx-string": "^5.0.2",
     "react-hot-loader": "^4.5.0",
-    "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.1",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^2.2.1",
@@ -121,7 +109,6 @@
     "cross-fetch": "^3.0.1",
     "css-loader": "^2.0.0",
     "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^3.0.0",
     "history": "^3.2.1",
     "html-webpack-plugin": "^3.0.0",
