--- a/package.json
+++ b/package.json
@@ -129,14 +129,13 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.8",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "sanitize.css": "^5.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.0.0",
-    "use-named-routes": "^0.3.2",
     "webpack-dotenv-plugin": "^2.0.0",
     "webpack-merge": "^4.0.0",
     "whatwg-fetch": "^2.0.1"
