--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "lint": "eslint . --ext .js --ext .jsx --ignore-path .eslintignore --cache",
     "preversion": "npm test",
     "postversion": "git push && git push --tags",
-    "pre-commit": [
-      "lint",
-      "test"
-    ],
     "stats:build": "webpack --profile --json --config ./tools/webpack/webpack.config.publish.js > .stats.json",
     "stats:serve": "npm run stats:build && webpack-bundle-analyzer ./.stats.json ./build",
     "stats:help": "webpack-bundle-analyzer --help",
@@ -35,7 +31,8 @@
     "setup:npm": "npm prune && npm update && npm install --production",
     "test": "jest",
     "test:watch": "npm test -- --watch",
-    "version": "git add package.json"
+    "version": "git add package.json",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,css}\""
   },
   "engine": {
     "node": ">= 4.0.0",
@@ -76,13 +73,16 @@
     "enzyme-to-json": "^3.0.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
+    "husky": "^1.3.1",
     "jest": "^24.0.0",
+    "lint-staged": "^8.1.3",
     "nock": "^9.0.2",
     "nodemon": "^1.18.6",
-    "pre-commit": "^1.1.3",
+    "prettier": "^1.16.4",
     "react-hot-loader": "^4.5.0",
     "redux-mock-store": "^1.2.1",
     "webpack": "^4.29.3",
@@ -139,5 +139,21 @@
     "webpack-dotenv-plugin": "^2.0.0",
     "webpack-merge": "^4.0.0",
     "whatwg-fetch": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": [
+      "prettier --write",
+      "npm t -- .",
+      "git add"
+    ],
+    "**/*.md": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
